--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,14 @@ footer{
     font-weight: 800;
 }
 
+@media screen and (max-width: 768px){
+    header{
+        flex-direction: column;
+        height: 75px;
+        align-items: center;
+    }
+
+    .logo img{
+        height: 40px;
+    }
+}
